--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.479.0",
+    "motion": "^12.4.11",
     "next-themes": "^0.4.5",
     "process": "^0.11.10",
     "react": "^19.0.0",
