--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,15 +13,19 @@
     "@cosmjs/cosmwasm-stargate": "^0.33.0",
     "@cosmjs/math": "^0.31.3",
     "@nibiruchain/nibijs": "^6.1.1",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.11",
     "next-themes": "^0.4.5",
     "process": "^0.11.10",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "sonner": "^2.0.1",
