--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@cosmjs/cosmwasm-stargate": "^0.33.0",
     "@cosmjs/math": "^0.31.3",
     "@nibiruchain/nibijs": "^6.1.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.12",
