--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,17 @@
     "@cosmjs/math": "^0.31.3",
     "@nibiruchain/nibijs": "^6.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tailwindcss/vite": "^4.0.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.479.0",
     "motion": "^12.4.11",
     "next-themes": "^0.4.5",
